Proposes that country name and province name need not match for SPIFFE certificates

--- a/scripts/root_openssl.conf
+++ b/scripts/root_openssl.conf
@@ -37,8 +37,8 @@ policy            = policy_strict
 [ policy_strict ]
 # The root CA should only sign intermediate certificates that match.
 # See the POLICY FORMAT section of `man ca`.
-countryName             = match
-stateOrProvinceName     = match
+countryName             = optional
+stateOrProvinceName     = optional
 organizationName        = match
 organizationalUnitName  = optional
 commonName              = supplied
