--- a/python/sample_config.ini
+++ b/python/sample_config.ini
@@ -9,4 +9,6 @@ commonName = Blog
 
 [extensions]
 # Delimited with ","
-nameConstraints = spiffe:service:acme.com:acme-dev:.,spiffe:service:acme.com:.
+nameConstraints = spiffe:acme.com:acme-dev:.,spiffe:acme.com:.
+hostname = foo-service.acme-dev.acme.com
+spiffeID = spiffe:service:acme.com:acme-dev:foo-service?version=1.0
