--- a/generate/python/sample_config.ini
+++ b/generate/python/sample_config.ini
@@ -10,5 +10,6 @@ commonName = Blog
 [extensions]
 # Delimited with ","
 nameConstraints = spiffe:acme.com:acme-dev:.,spiffe:acme.com:.
-hostname = foo-service.acme-dev.acme.com
-spiffeID = spiffe:service:acme.com:acme-dev:foo-service?version=1.0
+hostname = frontend.dev.acme.com
+spiffeID = spiffe://dev.acme.com:/blog/frontend
+keyUsage =
