Cleaning up script
Removed un used portions of the OpenSSL conf files.
Adding name constraints
TODO: figure out how to add the SPIFFE ID path to the name constraints ( currently hard coded into the conf file, see if we can do this via CLI OpenSSL call )

Also, make sure we add SAN extension to Leaf cert

Cleaned up OpenSSL Conf files

Have to clean up files more. Figure out the nameConstraints configuration

Add, and verify a negative test, where the SPIFFE SAN value does not match the NameConstraint

Fixed Docker files

TODO: Need to update the  location of the generated PEM Files in the python script

fixing docs

Fixed Makefile for python script. Added target directory
Update README.md

Fixes some typos in READMEs

Fixing OpenSSL config

When verification of nameConstraint is applied
OpenSSL will "strip" the Scheme from the URI path
then compare the "domain" of the SAN domain with the URI domain in the NameConstraint so

SAN:URI:spiffe://domain/path   will match with NameConstraint:URI:domain

"." is the wildcard match

so what didnt work  is

SAN:URI:spiffe://domain/path   => NameConstraint:URI:spiffe://domain

the comparision became
 domain/path => spiffe://domain

--- a/generate/python/Makefile
+++ b/generate/python/Makefile
@@ -1,24 +1,49 @@
+#==========================
+#-------------------------- 
+
 VENV=.venv
 VDIR=$(PWD)/$(VENV)
 
+NAME = spiffe/gen/python
 
-clean:
-	@find . -name \*.pyc -exec rm {} \;
-	@find . -name "results.xml" -exec rm {} \;
-	@find . -name \*.py,cover -exec rm {} \;
-	@find . -name \*.log -exec rm {} \;
-	@rm -rf ./src/{htmlcov,.coverage,coverage.xml}
+VERSION = 0.1.0
+SRC_CERTS_DIR = ${PWD}/../.certs
+SRC_CONF_DIR  = ${PWD}/conf
+
+CERTS_DIR = /spiffe/certs
+CONF_DIR  = /spiffe/conf
+
+GEN_DIR = /spiffe/svid/gen
+INTERMEDIATE_DIR = $(CERTS_DIR)/org/acme.com/ca/intermediate
+SECRET     ?= default 
+PASSPHRASE ?= default
+
+.PHONY: all build
+
+build:
+	@echo "======================"
+	@echo "Create Docker Image"
+	@echo "----------------------"
+	docker build -t $(NAME):$(VERSION) --rm .
 
 
-python_env:
-	if [ ! -f $(VDIR)/bin/python ]; then \
-		echo "Creating virtual environment $(VENV)"; \
-		virtualenv -p python3 --prompt="(spiffe_pki)" $(VDIR); \
-		(. $(VDIR)/bin/activate && easy_install --upgrade pip); \
-	fi
+clean_exited:
+	@echo "Cleanup all exited containers"
+	docker rm -v $(shell docker ps -a -q -f ancestor=$(NAME):$(VERSION) -f status=exited)
 
 
-dev_requirements: python_env
-	@echo "Installing test requirements"
-	(. $(VDIR)/bin/activate && \
-	 pip install -r requirements/dev.txt)
+tag_latest:
+	docker tag -f $(NAME):$(VERSION) $(NAME):latest
+
+
+run:
+	@echo "Run container: $(NAME)"
+	docker run -v $(SRC_CERTS_DIR):$(CERTS_DIR) -v $(SRC_CONF_DIR):$(CONF_DIR) -it $(NAME):$(VERSION) /bin/bash
+
+generate:
+	@echo "Run container: $(NAME)"
+	docker run -v $(SRC_CERTS_DIR):$(CERTS_DIR) -v $(SRC_CONF_DIR):$(CONF_DIR) -it $(NAME):$(VERSION) python3 spiffe.py --path=$(INTERMEDIATE_DIR)/  --pass=$(PASSPHRASE) --secret=$(SECRET) --config=$(CONF_DIR)/sample_config.ini --target=$(CERTS_DIR)
+
+
+last_build_date:
+	docker inspect -f '{{ .Created }}' $(NAME):$(VERSION)
