Adding multi tests for different setups
Create different cert bundles. Driven from the CSV file in the conf directory.
Will create different combinations of SAN, SpiffeID and NameConstraints. 

Verify script will run in container and run through all the configured domains 
to test.  Added OpenSSL test to verify Leaf certificate against the cert bundle

--- a/generate/scripts/Dockerfile
+++ b/generate/scripts/Dockerfile
@@ -18,8 +18,9 @@ ADD ./bash /spiffe/svid/gen
 WORKDIR /spiffe/svid/gen
 
 # Copy Library repos
-RUN git clone https://github.com/tests-always-included/mo.git  ./lib/mo
-RUN git clone https://github.com/geoffroy-aubry/awk-csv-parser.git ./lib/awk-csv-parser
+RUN git clone https://github.com/tests-always-included/mo.git  ./.lib/mo
+RUN git clone https://github.com/geoffroy-aubry/awk-csv-parser.git ./.lib/awk-csv-parser
 
 
+# TODO: Setup entry point to simplify the Makefile
 # ENTRYPOINT [ "/spiffe/svid/gen/generate_ca.sh"]
