--- a/generate/scripts/conf/root_openssl.conf
+++ b/generate/scripts/conf/root_openssl.conf
@@ -1,8 +1,9 @@
 # OpenSSL root CA configuration file.
 # Copy to `/root/ca/openssl.cnf`.
 
-# HOME = .
-dir  = .
+# Set the directory from the ENVIRONMENT VARIABLE "HOME_CA"
+HOME = .
+dir = ${ENV::HOME_CA}
 
 [ ca ]
 # `man ca`
