First refactor pass Re-organize file structure Ammend cert config to state expected result - sort certs as such Remove config input on openssl test Remove results output on openssl test Top-level Makefile Develop standard entrypoint, --bad-certs flag README, CONTRIBUTING, remove stale docs More coming...

--- a/verify/openssl/Dockerfile
+++ b/verify/openssl/Dockerfile
@@ -13,8 +13,8 @@ RUN apk add --update openssl && \
 RUN apk update && apk upgrade && \
     apk add --no-cache bash
 
-ADD ./bash /spiffe/svid/verify
+ADD ./verify_ca.sh /
 
-WORKDIR /spiffe/svid/verify
+WORKDIR /
 
-# ENTRYPOINT [ "/spiffe/svid/verify/verify_ca.sh" ]
+ENTRYPOINT [ "/verify_ca.sh" ]
