Refactor pass 2 Updated READMEs Simplified test cases (one test per run) Simplified OpenSSL verify script Update Makefile to handle virtualenv setup Initial pass on python test driver

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 .idea
-*.certs
-python/venv
-python/spiffe.cert.pem
-python/spiffe.key.pem
-scripts/org/*
-*.venv
+.certs
+.venv
 *.pyc
 *~
-.results
