--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,7 @@ jobs:
       - checkout
       - run: make generate
       - run: make verify
+      - store_test_results:
+          path: test_results
+
       
