update circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,11 @@ version: 2
 jobs:
   build:
     machine: true
-    working_directory: ~/svid-test
     steps:
       - checkout
-      - run: make generate
-      - run: make verify
+      - run: make -C svid-test generate
+      - run: make -C svid-test verify
       - store_test_results:
-          path: test_results
+          path: svid-test/test_results
 
       
