document TSC members

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,33 @@
-* @drrt @ajessup @y2bishop2y @evan2645
+##
+## SPIFFE Technical Steering Committee
+## https://github.com/spiffe/spiffe/blob/master/GOVERNANCE.md
+## tsc@spiffe.io
+##
+
+# Emiliano Berenbaum
+# https://github.com/y2bishop2y
+# https://www.linkedin.com/in/eberenb
+
+# Evan Gilman
+# https://github.com/evan2645
+# https://www.linkedin.com/in/evan2645
+
+# Jon Debonis
+# https://github.com/jondb
+# https://www.linkedin.com/in/jondb
+
+# Joseph Beda
+# https://github.com/jbeda
+# https://www.linkedin.com/in/jbeda
+
+# Mark Lakewood
+# https://github.com/mlakewood
+# https://www.linkedin.com/in/marklakewood
+
+* @evan2645 @jondb @jbeda @mlakewood @y2bishop2y
+
+##
+## SIG Maintainers
+##
+
+/community -* @drrt @ajessup @y2bishop2y @evan2645
