Update JJs github ID following 2fa snafu

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,7 +32,7 @@
 ##
 
 # TODO: Missing Davi Ottenheimer
-/standards/         @evan2645 @justinburke @mattmoyer @pragashjj @diogomonica
+/standards/         @evan2645 @justinburke @mattmoyer @pragashj @diogomonica
 
 ##
 ## Community
