Add Spike Curtis as a SPIFFE maintainer
Signed-off-by: Evan Gilman <evan@scytale.io>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -31,8 +31,7 @@
 ## SPIFFE Maintainers
 ##
 
-# TODO: Missing Davi Ottenheimer
-/standards/         @evan2645 @justinburke @mattmoyer @pragashj @diogomonica
+/standards/         @evan2645 @justinburke @mattmoyer @pragashj @spikecurtis
 
 ##
 ## Community
