--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,55 +1,12 @@
 ##
-## SPIFFE Technical Steering Committee
-## https://github.com/spiffe/spiffe/blob/master/GOVERNANCE.md
-## tsc@spiffe.io
-##
-
-# Emiliano Berenbaum
-# https://github.com/y2bishop2y
-# https://www.linkedin.com/in/eberenb
-
-# Evan Gilman
-# https://github.com/evan2645
-# https://www.linkedin.com/in/evan2645
-
-# Jon Debonis
-# https://github.com/jondb
-# https://www.linkedin.com/in/jondb
-
-# Joseph Beda
-# https://github.com/jbeda
-# https://www.linkedin.com/in/jbeda
-
-# Mark Lakewood
-# https://github.com/mlakewood
-# https://www.linkedin.com/in/marklakewood
-
-/GOVERNANCE.md      @evan2645 @jondb @jbeda @mlakewood @y2bishop2y
-/CODE-OF-CONDUCT.md @evan2645 @jondb @jbeda @mlakewood @y2bishop2y
-
-##
 ## SPIFFE Maintainers
 ##
 
-/standards/         @evan2645 @justinburke @pragashj @spikecurtis @azdagron
+*  @evan2645 @justinburke @spikecurtis @azdagron
 
-##
-## Community
-##
+/CODE-OF-CONDUCT.md @spiffe/ssc
+/GOVERNANCE.md      @spiffe/ssc
+/README.md          @spiffe/ssc
+/community/         @spiffe/ssc
+/ssc/               @spiffe/ssc
 
-/community/         @drrt @ajessup @y2bishop2y @evan2645
-/README.md          @drrt @ajessup @y2bishop2y @evan2645
-/CONTRIBUTING.md    @drrt @ajessup @y2bishop2y @evan2645
-
-##
-## SVID Test Suite
-##
-
-/svid-test/         @drrt @evan2645
-
-##
-## Misc
-##
-
-/.travis.yml        @drrt @evan2645
-/CODEOWNERS         @evan2645 @jondb @jbeda @mlakewood @y2bishop2y
