add maturity doc update in CODEOWNERS
Signed-off-by: andrew.s.moore <andrew.s.moore@uber.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,6 +6,7 @@
 
 /CODE-OF-CONDUCT.md @spiffe/ssc
 /GOVERNANCE.md      @spiffe/ssc
+/MATURITY.md        @spiffe/ssc
 /NEW_PROJECTS.md    @spiffe/ssc
 /README.md          @spiffe/ssc
 /community/         @spiffe/ssc
