--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,5 +10,6 @@
 /NEW_PROJECTS.md    @spiffe/ssc
 /README.md          @spiffe/ssc
 /community/         @spiffe/ssc
+/proposals/         @spiffe/ssc
 /ssc/               @spiffe/ssc
 
